# UUID-API

./: README.md
uuid_assignment/: Dockerfile  pyproject.toml
uuid_assignment/src/uuid_assignment/: app.py
